# LxPS

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: CMakeCCompilerId.c.D572DCC6C3030336.idx  CMakeCXXCompilerId.cpp.0D2DA685CF983DEE.idx  MainMenu.hpp.4414E91DA638489B.idx  SerialMonitor.hpp.2BBAE3B7BEDF1D3E.idx  SerialPort.hpp.64650FB04B0CF464.idx  main.cpp.BB702E45E3A8DFC2.idx
headers/: MainMenu.hpp  SerialMonitor.hpp  SerialPort.hpp
src/: CMakeLists.txt  MainMenu.cpp  SerialMonitor.cpp  SerialPort.cpp  main.cpp
